Inserção do reset Css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
   <title>AluraBooks</title>
 
+  <link rel="stylesheet" href="estilos/reset.css">
   <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-  
+  <h1>Alurabook</h1>
 </body>
 </html>
