--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 
   <title>AluraBooks</title>
 
-  <link rel="stylesheet" href="estilos/reset.css">
-  <link rel="stylesheet" href="estilos/style.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Alurabook</h1>
+  <header class="cabecalho">
+    <div class="container">
+      <span class="cabecalho__menu-hamburguer container__imagem"></span>
+      <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+    </div>
+    <div class="container">
+      <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras" class="container__imagem"></a>
+      <a href="#"><img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem"></a>
+    </div>
+  </header>
 </body>
 </html>
