--- a/index.html
+++ b/index.html
@@ -48,5 +48,10 @@
       <a href="#"><img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem"></a>
     </nav>
   </header>
+  <section class="banner">
+    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    <input type="search" placeholder="Qual será sua próxima leitura?" class="banner__pesquisa">
+  </section>
 </body>
 </html>
