--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </section>
   <section class="carrossel">
     <h2 class="carrossel__titulo">Novos Lançamentos</h2>
-    <!-- Container Principal dos Slides -->
+
     <div class="swiper">
       <!-- Bolinhas da Paginação -->
       <div class="swiper-pagination"></div>
@@ -78,6 +78,30 @@
       <!-- Setinhas -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
+    </div>
+
+    <div class="card">
+      <!-- 1ª linha -->
+      <div class="card__descricao">
+        <!-- 1ª coluna -->
+        <div class="descricao">
+          <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+          <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+          <p class="decricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+        </div>
+        <!-- 2ª coluna -->
+        <img src="img/Angular.svg" alt="Icone do Angular" class="descricao__imagem">
+      </div>
+      <!-- 2ª linha -->
+      <div class="card__botoes">
+        <!-- 1ª coluna -->
+        <ul class="botoes">
+          <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar Livro"></li>
+          <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+        </ul>
+        <!-- 2ª coluna -->
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+      </div>
     </div>
   </section>
 
