--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
     <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input type="search" placeholder="Qual será sua próxima leitura?" class="banner__pesquisa">
   </section>
+  <!-- NOVOS LANÇAMENTOS -->
   <section class="carrossel">
+    <!-- TÍTULO DO CARROSSEL -->
     <h2 class="carrossel__titulo">Novos Lançamentos</h2>
-
+    <!-- CARROSSEL -->
     <div class="swiper">
       <!-- Bolinhas da Paginação -->
       <div class="swiper-pagination"></div>
@@ -79,7 +81,7 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
-
+    <!-- CARD DE RECOMENDAÇÃO -->
     <div class="card">
       <!-- 1ª linha -->
       <div class="card__descricao">
@@ -103,6 +105,54 @@
         <a href="#" class="botoes__ancora">Saiba mais</a>
       </div>
     </div>
+  </section>
+  <!-- MAIS VENDIDOS -->
+  <section class="carrossel">
+    <h2 class="carrossel__titulo">Mais vendidos</h2>
+
+    <div class="swiper">
+      <!-- Bolinhas da Paginação -->
+      <div class="swiper-pagination"></div>
+      <!-- Bloco dos Slides -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro Sobre Apache Kafta e Spring Boot da Alura Books"></div>
+        <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="Livro Sobre Arquitetura de Software Distribuido da Alura Books"></div>
+        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro Sobre Javascript assertivo da Alura Books"></div>
+        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro Sobre Liderança em Design da Alura Books"></div>
+        <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro Sobre Programação em Portugol da Alura Books"></div>
+        <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro Sobre ReactNative da Alura Books"></div>
+      </div>
+      <!-- Setinhas -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+
+    <div class="card">
+      <!-- 1ª linha -->
+      <div class="card__descricao">
+        <!-- 1ª coluna -->
+        <div class="descricao">
+          <img src="img/Estrelinhas.svg" alt="Nível de recomendação" class="descricao__estrelinhas">
+          <h3 class="descricao__titulo">Autora do Mês</h3>
+          <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+          <p class="decricao__texto">Analista de Sistemas e escritora, Juliana é especialista em Front-end.</p>
+        </div>
+        <!-- 2ª coluna -->
+        <img src="img/Juliana Agarikov.svg" alt="Foto de Juliana Agarikov" class="descricao__imagem">
+      </div>
+      <!-- 2ª linha -->
+      <div class="card__botoes">
+        <!-- 1ª coluna -->
+        <ul class="botoes">
+          <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar Livro"></li>
+          <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+        </ul>
+        <!-- 2ª coluna -->
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+      </div>
+    </div>
+
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
