--- a/index.html
+++ b/index.html
@@ -154,7 +154,37 @@
     </div>
 
   </section>
+  <!-- TÓPICOS VISITADOS RECENTEMENTE -->
+  <section class="topicos">
+    <h2 class="topicos__titulo">tópicos visitados recentemente</h2>
+    <ul class="topicos__lista">
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Android</a>
+      </li>
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Marketing digital</a>
+      </li>
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Agile</a>
+      </li>
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Startups</a>
+      </li>
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">HTML & CSS</a>
+      </li>
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Python</a>
+      </li>
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">OO</a>
+      </li>
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Java</a>
+      </li>
+    </ul>
 
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="script/slides.js"></script>
 </body>
