--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
     <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
     <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
   </section>
+  <!-- LINHA -->
+  <hr/>
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <h2 class="rodape__titulo">Grupo Alura</h2>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="script/slides.js"></script>
