Adição do nome AluraBooks

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </ul>
       </nav>
       <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+      <h1 class="container__titulo"><b class="container__titulo-negrito">Alura</b>Books</h1>
     </div>
     <nav class="container">
       <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem"></a>
@@ -197,7 +198,7 @@
   <footer class="rodape">
     <h2 class="rodape__titulo">Grupo Alura</h2>
   </footer>
-
+  <!-- SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="script/slides.js"></script>
 </body>
