--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- CABEÇALHO -->
   <header class="cabecalho">
+    <!-- MENU MOBILE-->
     <div class="container">
+      <!-- MENU HAMBURGUER -->
       <input type="checkbox" id="menu" class="container__botao">
       <label for="menu">
         <span class="cabecalho__menu-hamburguer container__imagem"></span>
       </label>
+      <!-- LISTA DO MENU HAMBURGUER -->
       <nav class="lista-menu">
         <ul>
           <li class="lista-menu__titulo">Categorias</li>
@@ -41,15 +45,24 @@
           </li>
         </ul>
       </nav>
+      <!-- LOGO DA ALURABOOKS -->
       <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
       <h1 class="container__titulo"><b class="container__titulo-negrito">Alura</b>Books</h1>
     </div>
+    <!-- MENU TABLET-->
+    <nav class="opcoes">
+      <a href="#" class="opcoes__item">categorias</a>
+      <a href="#" class="opcoes__item">favoritos</a>
+      <a href="#" class="opcoes__item">minha estante</a>
+    </nav>
+    <!-- BARRA DE NAVEGAÇÃO ENTRE FAVORITOS, COMPRAS E PERFIL -->
     <nav class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem favorito__transparente"></a>
       <a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras" class="container__imagem"></a>
       <a href="#"><img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem"></a>
     </nav>
   </header>
+  <!-- BANNER DE PESQUISA -->
   <section class="banner">
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
     <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
