Ajuste para telas 1024px

--- a/index.html
+++ b/index.html
@@ -233,6 +233,101 @@
   <!-- RODAPÉ -->
   <footer class="rodape">
     <h2 class="rodape__titulo">Grupo Alura</h2>
+    <!--LISTA 1-->
+    <ul class="lista-rodape">
+      <!-- TITULO DA LISTA-->
+      <li class="lista-rodape__titulo">Educação</li>
+      <!-- SERVIÇO CAELUM -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/Caelum.svg" alt="Logo da Caelum">
+        <a href="#" class="lista-rodape__link">Caelum</a>
+      </li>
+      <!-- SERVIÇO CASA DO CÓDIGO -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/CasaDoCodigo.svg" alt="Logo da casa do código">
+        <a href="#" class="lista-rodape__link">Casa do Código</a>
+      </li>
+    </ul>
+    <!--LISTA 2-->
+    <ul class="lista-rodape">
+      <!-- TITULO DA LISTA-->
+      <li class="lista-rodape__titulo">Educação Online</li>
+      <!-- SERVIÇO ALURA -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/Alura.svg" alt="Logo da Alura">
+        <a href="#" class="lista-rodape__link">Alura</a>
+      </li>
+      <!-- SERVIÇO ALURA PARA EMPRESAS -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/AluraEmpresas.svg" alt="Logo da Alura Para Empresas">
+        <a href="#" class="lista-rodape__link">Alura Para Empresas</a>
+      </li>
+      <!-- SERVIÇO ALURA LATAM -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/AluraLATAM.svg" alt="Logo da Alura Latam">
+        <a href="#" class="lista-rodape__link">Alura Latam</a>
+      </li>
+      <!-- SERVIÇO ALURA START -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/AluraStart.svg" alt="Logo Alura Start">
+        <a href="#" class="lista-rodape__link">Alura Start</a>
+      </li>
+      <!-- SERVIÇO MUSICDOT -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/MusicDot.svg" alt="Logo MusicDot">
+        <a href="#" class="lista-rodape__link">MusicDot</a>
+      </li>
+      <!-- SERVIÇO ALURA LÍNGUA-->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/AluraLingua.svg" alt="Logo Alura Língua">
+        <a href="#" class="lista-rodape__link">Alura Língua</a>
+      </li>
+      <!-- SERVIÇO PM3 -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/PM3.svg" alt="Logo PM3">
+        <a href="#" class="lista-rodape__link">PM3</a>
+      </li>
+    </ul>
+    <!--LISTA 3-->
+    <ul class="lista-rodape">
+      <!-- TITULO DA LISTA-->
+      <li class="lista-rodape__titulo">Comunidade</li>
+      <!-- SERVIÇO HIPSTERS PONTO TECH -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/HipstersTech.svg" alt="Logo Hispsters Ponto Tech">
+        <a href="#" class="lista-rodape__link">Hispsters Ponto Tech</a>
+      </li>
+      <!-- SERVIÇO SCUBA DEV -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/ScubaDev.svg" alt="Logo Scuba Dev">
+        <a href="#" class="lista-rodape__link">Scuba Dev</a>
+      </li>
+      <!-- SERVIÇO LAYERS PONTO TECH -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/LayersTech.svg" alt="Logo Layers Ponto Tech">
+        <a href="#" class="lista-rodape__link">Layers Ponto Tech</a>
+      </li>
+      <!-- SERVIÇO LIKE A BOSS -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/LikeABoss.svg" alt="Logo Like a Boss">
+        <a href="#" class="lista-rodape__link">Like a Boss</a>
+      </li>
+      <!-- SERVIÇO CARREIRA SEM FRONTEIRA -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/CarreiraSemFronteira.svg" alt="Logo Carreira Sem Fronteira">
+        <a href="#" class="lista-rodape__link">Carreira Sem Fronteira</a>
+      </li>
+      <!-- SERVIÇO HIPSTERS PONTO JOBS -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/HipstersJobs.svg" alt="Logo  Hispsters Ponto Jobs">
+        <a href="#" class="lista-rodape__link">Hispsters Ponto Jobs</a>
+      </li>
+      <!-- SERVIÇO GUJ -->
+      <li class="lista-rodape__item">
+        <img src="img/imagens-rodape/GUJ.svg" alt="Logo GUJ">
+        <a href="#" class="lista-rodape__link">GUJ</a>
+      </li>
+    </ul>
   </footer>
   <!-- SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
