ajuste para telas de 1728px

--- a/index.html
+++ b/index.html
@@ -82,9 +82,17 @@
     </ul>
     <!-- BARRA DE NAVEGAÇÃO ENTRE FAVORITOS, COMPRAS E PERFIL -->
     <nav class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem favorito__transparente"></a>
-      <a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras" class="container__imagem"></a>
-      <a href="#"><img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem"></a>
+      <a href="#">
+        <img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem favorito__transparente">
+      </a>
+      <a href="#" class='container__link'>
+        <img src="img/Compras.svg" alt="Carrinho de Compras" class="container__imagem">
+        <p class="container__texto">Minha Sacola</p>
+      </a>
+      <a href="#" class='container__link'>
+        <img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem">
+        <p class="container__texto">Meu Perfil</p>
+      </a>
     </nav>
   </header>
   <!-- BANNER DE PESQUISA -->
