--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <!-- MENU HAMBURGUER -->
       <input type="checkbox" id="menu" class="container__botao">
-      <label for="menu">
+      <label for="menu" class="container__rotulo">
         <span class="cabecalho__menu-hamburguer container__imagem"></span>
       </label>
       <!-- LISTA DO MENU HAMBURGUER -->
